@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007-2008 - TortoiseSVN
+// Copyright (C) 2007-2009 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -61,6 +61,7 @@ bool MergeCommand::Execute()
 		progDlg.SetCommand(CSVNProgressDlg::SVNProgress_Merge);
 		int options = wizard.m_bIgnoreAncestry ? ProgOptIgnoreAncestry : 0;
 		options |= wizard.m_bRecordOnly ? ProgOptRecordOnly : 0;
+		options |= wizard.m_bForce ? ProgOptForce : 0;
 		progDlg.SetOptions(options);
 		progDlg.SetPathList(CTSVNPathList(wizard.wcPath));
 		progDlg.SetUrl(wizard.URL1);
